NEW - # 564: CopyObservationVisitor must handle DataSources of an IObservation https://dev.bjoernsen.de/prognose/ticket/564