@@ -63,16 +63,16 @@ import org.xml.sax.InputSource;
  */
 public class ZmlTest extends TestCase
 {
-  private final SimpleDateFormat df = new SimpleDateFormat( "dd.MM.yyyy" ); //$NON-NLS-1$
+  private final SimpleDateFormat m_df = new SimpleDateFormat( "dd.MM.yyyy" ); //$NON-NLS-1$
 
-  private final DoubleComparator dc = new DoubleComparator( 0 );
+  private final DoubleComparator m_dc = new DoubleComparator( 0 );
 
   // contains the list of ZMLs to test
-  private final static String[] ZMLs = { "resources/beispiel.zml", "resources/inline_ex.zml" }; //$NON-NLS-1$ //$NON-NLS-2$
+  private final static String[] ZMLS = { "resources/beispiel.zml", "resources/inline_ex.zml" }; //$NON-NLS-1$ //$NON-NLS-2$
 
   public void testZmls( ) throws SensorException, ParseException
   {
-    for( final String obsID : ZMLs )
+    for( final String obsID : ZMLS )
     {
       System.out.println( "Testing: " + obsID ); //$NON-NLS-1$
 
@@ -129,13 +129,13 @@ public class ZmlTest extends TestCase
     final IAxis vAxis2 = ObservationUtilities.findAxisByName( axes, "Pegel2" ); //$NON-NLS-1$
     assertNotNull( vAxis2 );
 
-    assertEquals( values.getElement( 0, dateAxis ), df.parse( "01.01.2004" ) ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( 0, vAxis1 ), Double.valueOf( "1.0" ) ) == 0 ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( 0, vAxis2 ), new Double( 11 ) ) == 0 );
+    assertEquals( values.getElement( 0, dateAxis ), m_df.parse( "01.01.2004" ) ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( 0, vAxis1 ), Double.valueOf( "1.0" ) ) == 0 ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( 0, vAxis2 ), new Double( 11 ) ) == 0 );
 
-    assertEquals( values.getElement( 20, dateAxis ), df.parse( "21.01.2004" ) ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( 20, vAxis1 ), Double.valueOf( "16.6" ) ) == 0 ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( 20, vAxis2 ), Double.valueOf( "18.5" ) ) == 0 ); //$NON-NLS-1$
+    assertEquals( values.getElement( 20, dateAxis ), m_df.parse( "21.01.2004" ) ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( 20, vAxis1 ), Double.valueOf( "16.6" ) ) == 0 ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( 20, vAxis2 ), Double.valueOf( "18.5" ) ) == 0 ); //$NON-NLS-1$
   }
 
   private void _testSetValues( final IObservation obs ) throws SensorException, ParseException
@@ -154,19 +154,19 @@ public class ZmlTest extends TestCase
     final SimpleTupleModel m = new SimpleTupleModel( obs.getAxisList() );
 
     final Object[] t1 = new Object[3];
-    t1[m.getPositionFor( dateAxis )] = df.parse( "20.01.2004" ); //$NON-NLS-1$
+    t1[m.getPositionFor( dateAxis )] = m_df.parse( "20.01.2004" ); //$NON-NLS-1$
     t1[m.getPositionFor( vAxis1 )] = new Double( 44 );
     t1[m.getPositionFor( vAxis2 )] = new Double( 11 );
     m.addTupple( t1 );
 
     final Object[] t2 = new Object[3];
-    t2[m.getPositionFor( dateAxis )] = df.parse( "21.01.2004" ); //$NON-NLS-1$
+    t2[m.getPositionFor( dateAxis )] = m_df.parse( "21.01.2004" ); //$NON-NLS-1$
     t2[m.getPositionFor( vAxis1 )] = new Double( 55 );
     t2[m.getPositionFor( vAxis2 )] = new Double( 22 );
     m.addTupple( t2 );
 
     final Object[] t3 = new Object[3];
-    t3[m.getPositionFor( dateAxis )] = df.parse( "22.01.2004" ); //$NON-NLS-1$
+    t3[m.getPositionFor( dateAxis )] = m_df.parse( "22.01.2004" ); //$NON-NLS-1$
     t3[m.getPositionFor( vAxis1 )] = new Double( 66 );
     t3[m.getPositionFor( vAxis2 )] = new Double( 33 );
     m.addTupple( t3 );
@@ -179,23 +179,23 @@ public class ZmlTest extends TestCase
     assertEquals( values.getCount(), 22 );
 
     int i = 19;
-    assertEquals( values.getElement( i, dateAxis ), df.parse( "20.01.2004" ) ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "44" ) ) == 0 ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "11" ) ) == 0 ); //$NON-NLS-1$
+    assertEquals( values.getElement( i, dateAxis ), m_df.parse( "20.01.2004" ) ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "44" ) ) == 0 ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "11" ) ) == 0 ); //$NON-NLS-1$
 
     i = 20;
-    assertEquals( values.getElement( i, dateAxis ), df.parse( "21.01.2004" ) ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "55" ) ) == 0 ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "22" ) ) == 0 ); //$NON-NLS-1$
+    assertEquals( values.getElement( i, dateAxis ), m_df.parse( "21.01.2004" ) ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "55" ) ) == 0 ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "22" ) ) == 0 ); //$NON-NLS-1$
 
     i = 21;
-    assertEquals( values.getElement( i, dateAxis ), df.parse( "22.01.2004" ) ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "66" ) ) == 0 ); //$NON-NLS-1$
-    assertTrue( dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "33" ) ) == 0 ); //$NON-NLS-1$
+    assertEquals( values.getElement( i, dateAxis ), m_df.parse( "22.01.2004" ) ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( i, vAxis1 ), Double.valueOf( "66" ) ) == 0 ); //$NON-NLS-1$
+    assertTrue( m_dc.compare( (Number) values.getElement( i, vAxis2 ), Double.valueOf( "33" ) ) == 0 ); //$NON-NLS-1$
   }
 
   /**
-   * Tests the new mechanism ('data'-Element) for storing Metadata stuff
+   * Tests the new mechanism ('data'-Element) for storing meta data stuff
    */
   public void testMetadataEx( ) throws SensorException
   {
